@@ -1,4 +1,3 @@
-#Makefile.PL#
 CHANGES
 CREDITS
 FastCalc.xs
