@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7a1e58362759e7784818f9fc8ebb557c803fdc91 CHANGES
+SHA1 2e17111119f63df1511c05fce824cb4b6220783c CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
 SHA1 2261acc1a1f1ab8a2907380291dbde2063178aaa FastCalc.xs
-SHA1 6ba4004abe70bc4ad4400b60908bd2a4dc0dc668 MANIFEST
+SHA1 c00af0af44a912b550a7e86cd14fbaf0fcc421fc MANIFEST
 SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
-SHA1 fb707b584c507aa686f12704b3d9c363ab9900ac META.json
-SHA1 07693f805e27cb309e61e85990585c884fdea903 META.yml
-SHA1 c53fc74bf01b828f4e28757c06449110e0e07dd1 Makefile.PL
+SHA1 5d6e7412250e19723606c477e73bb993b7226c11 META.json
+SHA1 99b02c1a2807748fbf333fb1dfb6fb1ca2af8558 META.yml
+SHA1 22ec6ca66f99b3271167d814457a071d24f39a23 Makefile.PL
 SHA1 e3642759d709f62d10e99d8480e0404ec48965c7 README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
 SHA1 bce3c51bb369419603298064b78e14077b93af66 inc/Module/Install.pm
@@ -32,29 +32,29 @@ SHA1 76efdca3603159e0ae0e18f19fe72a0211a69529 inc/Module/Install/Makefile.pm
 SHA1 2e33e87882d60db3913da6284dd5295e5315e18a inc/Module/Install/Metadata.pm
 SHA1 c830b819e61bda5eca077c6291293bba61b3b9f2 inc/Module/Install/Win32.pm
 SHA1 cb52b9d6f88d512d448a6f35ed0af0d1201a134b inc/Module/Install/WriteAll.pm
-SHA1 92fba9a489974903b661956d4dac9280a252a8c8 lib/Math/BigInt/FastCalc.pm
+SHA1 b550b7c049945ad2c322933437c9c1b80b03fa89 lib/Math/BigInt/FastCalc.pm
 SHA1 385cc7ed3bf3e6290640b9880445ca9a3dea629e t/00sig.t
 SHA1 2c720454ea4a111cb2e554a869e66234fafb40a8 t/01load.t
 SHA1 b2ed9206ca5b69ec3b8bbf850bf4b6dfde518e7e t/02pod.t
 SHA1 ae4a4efc6c33e300fb247439451ca2f43ca14014 t/03podcov.t
-SHA1 9bc755bda3026da5300d62e88bd797ead7366348 t/bigfltpm.inc
-SHA1 7b3711429721f4da07384a81c09bd7f35eb95c0e t/bigfltpm.t
+SHA1 99550df360cd7a07cce39afd142aac112adea6e3 t/bigfltpm.inc
+SHA1 798969207bf77701fef0c4f99b50d55057ffdf2c t/bigfltpm.t
 SHA1 67d03610a42a11a2d8f73358441a8fab18b12103 t/bigintfc.t
-SHA1 7954255fd6b3a4a09b6e47c98a1ed79d40a49e22 t/bigintpm.inc
+SHA1 0d2491a3abeff02a6e0998cfaaede98a1f993d63 t/bigintpm.inc
 SHA1 1b449b2a340930f56abb50128bfdabeb9d993db7 t/bigintpm.t
 SHA1 9914c24f7ac04c96490e0f43e9c8a3f12b565610 t/bootstrap.t
 SHA1 38bf0f7b9949bf4eb746831ecde91841f0118931 t/leak.t
 SHA1 41bbc8a406b4685c932fd36f20b085ea2f04faf1 t/mbi_rand.t
-SHA1 38d000d99cb2492ab518786e62ab1fae710e0f8d t/mbimbf.inc
-SHA1 c928400143b454a3a2327f138558ab28f51901a4 t/mbimbf.t
+SHA1 171fffe6a1b291c7c4cd84c1c1ebd48efa420c64 t/mbimbf.inc
+SHA1 ea92ee9bd46419eeaa434e9480b2e36391db8b41 t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJWMmcRAAoJEGcmPl2fr166fSMH/0LLtfcQ4VPuEUVOrLm7mXPB
-qm+Y04Y3K1jNegsggfvl42H2BfozRYL7YuuqDSCzRmH6iCQn3EEC+Iz51S42BpZn
-CpMXVeoeNWYUu0Y8W3sGUjW4hJyk5M835CDcVpupTXCyiUV51DxraBf+HPhsOBoT
-FHP5pi0s/NAtIipTdlpXv4ewYTQWUeuAagr5s22ZN6HsT6Lk/hQ9VMvRwvkoe80w
-JGXjfAOoPCaSZ2GKBGAURkx7JptkpccknTEIHBpAOPmkoPZXdraizCNw9vlMrYUd
-mWmi+GJVK1RF1DLZvWAmMVq7tOPmNXTKOkGvVQXxswgJNqyOXOrXgxDvinlcJ9E=
-=0iPA
+iQEcBAEBAgAGBQJWOfNIAAoJEGcmPl2fr166OIMIAMuagNEfAXFjXC9hv4cel5qU
+jsUMEsH4MTHjaNOaO2sa92WJqXFEadmG3BkSPztaKpjTIUhad3tu5inKqysZ8h3k
+PbLSFbemAlXpNxp8KbuBq+mNPsMfB1exxCMKgBVphGmQlRNBfh4ZrhH1eBg+CN+W
+8+j98xIzpPuZhJs9H4UfrfHItS/g5RJHSSJpc/GV41orqghsYGldafA6DjJC9Ujr
+3gMk56SqW7dbV80HRtshySmnSiFjDHcvyQaIEhvEX1tecSINaODZM6Ed9ktkNuoD
+YjkVS6yMQplWJOjAmBgM96nYoG4k01kvdXjZYi/Tj95hL2ZCdkqO6cUWGw5f17I=
+=aigr
 -----END PGP SIGNATURE-----
