@@ -63,7 +63,7 @@ foreach my $class (qw/Math::BigInt Math::BigFloat/)
   $class->accuracy(undef);	# reset for further tests
   $class->precision(undef);
   }
-# bug with flog(Math::BigFloat,Math::BigInt)
+# bug with blog(Math::BigFloat,Math::BigInt)
 $x = Math::BigFloat->new(100);
 $x = $x->blog(Math::BigInt->new(10));
 
