@@ -1,5 +1,9 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2015-11-04 v0.36 pjacklam
+  * Sync test files with Math-BigInt-1.999708.
+  * Required version of Test::More is only 0.47, not 0.62.
+
 2015-10-28 v0.35 pjacklam
   * Sync test files with Math-BigInt-1.999707.
   * Update the README file.
